# open-llm-router-suite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  DESIGN.md  Dockerfile  NOTICE.md  README.md  docker-compose.yml  librechat.yaml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml  newapi-router-sso.yml  pages.yml
alembic/: env.py
alembic/versions/: 20260319_01_postgres_persistence.py  (+8 more)
docs/: index.html  newapi-router-sso-runbook.md  newapi-submodule-handoff.md  routerctl-newapi-quickstart.md
scripts/: deploy-lingtai-ai.sh  verify-newapi-real-upstreams.py  verify-newapi-router-sso.sh
tests/: conftest.py  test_admin_api.py  test_admin_models_endpoint.py  test_admin_sessions.py  test_admin_usage_summary.py  test_app_bootstrap.py  test_browser_portal.py  test_claude_code_import.py  test_cli_auth.py  test_codex_cli_import.py  test_codex_oauth_portal.py  test_compat_api_keys.py  test_config.py  test_credentials.py  test_developer_access.py  test_feishu_oidc.py  test_generic_oidc.py  test_inference_api.py  test_litellm_executor.py  test_lm_studio_service.py  test_me_api_keys_list_delete.py  test_me_stats_endpoint.py  test_me_usage_endpoints.py  test_model_catalog.py  test_newapi_sync.py  test_openai_bridge.py  test_openai_compat_executor.py  test_preferences_endpoint.py  test_provider_registry.py  test_router_sso.py  test_routerctl_cli.py  test_routerctl_distribution.py  test_token_revocation.py  test_upstream_oauth.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+144 files in other folders)
